apps/base/zerobyte/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zerobyte
  namespace: app-zerobyte

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`zerobyte.cluster.arpa`)
      kind: Rule
      services:
        - name: zerobyte
          namespace: app-zerobyte
          port: http
  tls:
    secretName: traefik-tls
